Adds null field handling; Adds image fetching from TMDB, including writing file; Migrates img_fetch_path to img_path; Removes previously tracked json files

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
 # Local JSON files
 json/
+# Images downloaded from TMDB
+src/tmdb/static/tmdb/*/*.jpg
+src/tmdb/static/tmdb/*/*.png
+src/tmdb/static/tmdb/*/*.svg
+src/tmdb/static/tmdb/*/*/*.jpg
+src/tmdb/static/tmdb/*/*/*.png
+src/tmdb/static/tmdb/*/*/*.svg
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
